# yetinel

./: README.md
python-analytics/: Dockerfile
python-analytics/app/: config.py  db.py  detection.py  main.py  models.py
python-analytics/app/routes/: detect.py  logs.py  stats.py
report/: report.aux  report.fdb_latexmk  report.tex  report.xdv
rust-server/: Cargo.toml
rust-server/src/: models.rs  server.rs
