[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = {version="2.8", features=["bson-chrono-0_4"]}
chrono = { version = "0.4", features = ["serde"] }
